OT-406/modules/network/vpc.tf
########################################################################################################################
## VPC
########################################################################################################################
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    var.common_tags,
    {
      Name = "${var.common_tags["project"]}-vpc"
    }
  )
}
