OT-406/modules/network/routetable.tf
########################################################################################################################
## Public Route Table
########################################################################################################################
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = merge(
    var.common_tags,
    {
      Name = "${var.common_tags["project"]}-public-rt"
      Type = "Public"
    }
  )
}

########################################################################################################################
## Public Route Table Associations
########################################################################################################################
resource "aws_route_table_association" "public" {
  count = length(aws_subnet.public)
  
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

########################################################################################################################
## Private Route Table
########################################################################################################################
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }

  tags = merge(
    var.common_tags,
    {
      Name = "${var.common_tags["project"]}-private-rt"
      Type = "Private"
    }
  )
}

########################################################################################################################
## Private Route Table Association
########################################################################################################################
resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
